Updated api tests